# arnhem-postal

./: .env  .env.example  .gitignore  .pylintrc  CHANGELOG.md  CHANGELOG.rst  DEVNOTES.rst  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.j2  manage.py  package-lock.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: django-admin.md
.github/workflows/: doc_pages.yaml  doc_pages.yml
arnhem/: asgi.py  settings.py  urls.py  wsgi.py
authuser/: models.py
authuser/migrations/: 0002_user_is_contributor_user_is_student_and_more.py
config/: settings.py  urls.py
docs/source/: architecture.rst  conf.py  devnotes.rst  index.rst
exhibit/: models.py
exhibit/migrations/: 0001_initial.py
maps/: filters.py  forms.py  urls.py  views.py
pages/: urls.py  views.py
pages/templates/: _base.html  about.html
postcards/: admin.py  apps.py  fields.py  filters.py  forms.py  models.py  resources.py  serializers.py  tables.py  tests.py  urls.py  views.py
postcards/fixtures/: languages.yaml  locations.yaml
postcards/migrations/: 0001_initial.py  0002_alter_location_country_alter_location_province_state_and_more.py  0002_rename_id_postcard_postcard_id.py  0003_alter_person_date_of_birth_and_more.py  0003_location_created_at_location_updated_at_and_more.py  0004_alter_person_first_name_alter_person_last_name.py  0004_postmark_remove_postcard_postmark_1_date_and_more.py  0005_alter_person_house_number_alter_person_street.py  0005_rename_id_image_image_id_and_more.py  0006_alter_person_last_name.py  (+84 more)
users/: adapters.py  admin.py  models.py
(+80 files in other folders)
