[tool.poetry]
name = "arnhem"
version = "0.1.3"
description = "Web application for the Arnhem Postal History project"
authors = ["Jason Heppler <jason@jasonheppler.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-tailwind = "^3.5.0"
django-htmx = "^1.14.0"
django-extensions = "^3.2.1"
django-environ = "^0.10.0"
humanfriendly = "^10.0"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
django-browser-reload = "^1.7.0"
python-dotenv = "^1.0.0"
pillow = "^9.4.0"
django-admin-interface = "^0.24.2"
django-taggit = "^3.1.0"
taggit-selectize = "^2.11.0"
django-multiselectfield = "^0.1.12"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
djhtml = "^3.0.6"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
